[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-server"
description = "Argus is an alert aggregator for monitoring systems"
authors = [{name="Uninett Opensource", email="opensource@uninett.no"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "Django>=4.2.16,<5.2",
    "dj-database-url>=0.5.0",
    "django-cors-headers>=3.2",
    "django-filter",
    "django-phonenumber-field[phonenumberslite]",
    "djangorestframework>=3.14",
    "drf-rw-serializers>=1.1",
    "drf-spectacular>=0.17",
    "factory_boy",
    "psycopg2",
    "python-dataporten-auth",
    "social-auth-core>=4.1",
    "social-auth-app-django>=5.0",
    "whitenoise",
    "wheel",
    "channels[daphne]>=4.0.0,<5",
    "channels-redis>=4",
    "httpx",
    "pydantic>=2",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Uninett/Argus"

[project.optional-dependencies]
docs = ["sphinx>=2.2.0"]
htmx = [
    "argus-htmx-frontend>=0.14",
    "social-auth-core>=4.1",
    "social-auth-app-django>=5.0",
]
dev = [
    "django-debug-toolbar",
    "coverage",
    "django-extensions",
    "ruff",
    "ipython",
    "pre-commit",
    "python-dotenv",
    "towncrier",
    "werkzeug",
    "tox<4",  # does not work on tox 4 for some reason
    "build",  # for debugging builds/installs
]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "templates/",
    "*.rst",
]

[tool.setuptools.exclude-package-data]
"*" = ["tests/"]

[tool.setuptools_scm]
write_to = "src/argus/version.py"

[tool.ruff]
line-length = 120
extend-exclude = [
    ".egg-info",
    "migrations",
    "templates",
]
output-format = "full"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/Argus/issues/{issue})"
wrap = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
