[build-system]
requires = ["hatchling", "versioningit>=3.0.0"]
build-backend = "hatchling.build"

[project]
name = "argus-server"
description = "Argus is an alert aggregator for monitoring systems"
authors = [{name="Uninett Opensource", email="opensource@uninett.no"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "Django>=5.2,<6.0",
    "dj-database-url>=0.5.0",
    "django-cors-headers>=3.2",
    "django-filter",
    "django-phonenumber-field[phonenumberslite]",
    "djangorestframework>=3.14",
    "drf-rw-serializers>=1.1",
    "drf-spectacular>=0.17",
    "factory_boy",
    "psycopg2",
    "python-dataporten-auth",
    "social-auth-core>=4.1",
    "social-auth-app-django>=5.0",
    "whitenoise",
    "wheel",
    "httpx",
    "pydantic>=2",
    "django-rest-knox",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Uninett/Argus"

[project.optional-dependencies]
docs = ["sphinx>=2.2.0"]
htmx = [
    "django-htmx",
    "django-widget-tweaks==1.5.0",
    "fontawesomefree~=6.6",
    "social-auth-core>=4.1",
    "social-auth-app-django>=5.0",
]
dev = [
    "django-debug-toolbar",
    "coverage",
    "django-extensions",
    "ruff",
    "djlint",
    "ipython",
    "pre-commit",
    "python-dotenv",
    "towncrier",
    "werkzeug",
    "tox>=4",
    "build",  # for debugging builds/installs
]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build]
artifacts = ["src/argus/version.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.versioningit.write]
file = "src/argus/version.py"

[tool.djlint]
profile="django"
indent = 2
ignore="H006"
use_gitignore=true

[tool.ruff]
line-length = 120
extend-exclude = [
    ".egg-info",
    "migrations",
    "templates",
]
output-format = "full"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F403", "F405"]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/Argus/issues/{issue})"
wrap = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
