[metadata]
name = aas
version = attr: aas.__version__
description = XXX: FILL THIS OUT, one short line/elevator pitch
long_description = file: README.md
long_description_content_type='text/markdown'
license = XXX: PICK A LICENSE, text string
url = XXX: Url to homepage (usually source repo)
author = XXX: Name of person/group
author_email = XXX: email of person/group
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
setup_requires =
    setuptools>=41.0
    wheel>=0.33
install_requires =
    setuptools>=41.0
    wheel>=0.33

[options.package_data]
* =
 *.rst
 templates/*

[options.packages.find]
exclude = tests
where = ./src/

[coverage:html]
omit =
    migrations,
    admin.py,
    test*

[flake8]
max-line-length = 88
filename =
    src/*
exclude =
    .tox,
    __pycache__,
    migrations,
    templates
