[metadata]
name = argus-server
description = XXX: FILL THIS OUT, one short line/elevator pitch
long_description = file: README.md
long_description_content_type='text/markdown'
license = GPLv3+
url = https://github.com/Uninett/Argus
author = XXX: Name of person/group
author_email = XXX: email of person/group
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Monitoring

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
setup_requires =
    setuptools>=41.0
    setuptools_scm==3.5.0
    wheel>=0.33
install_requires =
    setuptools>=41.0
    wheel>=0.33

[options.package_data]
* =
 *.rst
 templates/*

[options.packages.find]
exclude = tests
where = ./src/

[coverage:run]
source = ./src/.
omit =
    migrations,
    admin.py,
    test*

[coverage:report]
exclude_lines =
    # Ignore not abstract methods, as these cannot be tested
    raise NotImplementedError

[flake8]
max-line-length = 88
filename =
    src/*
exclude =
    .tox,
    __pycache__,
    migrations,
    templates
