[metadata]
name = argus-server
summary = Argus is an alert aggregator for monitoring systems
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
url = https://github.com/Uninett/Argus
author = Uninett Opensource
author_email = opensource@uninett.no
platform = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Monitoring

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
setup_requires =
    setuptools>=41.0
    setuptools_scm[toml]>=3.5.0
    wheel>=0.33
install_requires =
    setuptools>=41.0
    wheel>=0.33
    Django>=3.2.13,<3.3
    dj-database-url>=0.5.0
    django-cors-headers>=3.2
    django-filter
    django-multiselectfield
    django-phonenumber-field[phonenumberslite]
    djangorestframework<3.13
    drf-rw-serializers
    drf-spectacular>=0.11
    factory_boy
    psycopg2
    python-dataporten-auth
    social-auth-core>=4.1
    pytz>=2021.3
    social-auth-app-django>=5.0
    whitenoise
    channels>=3,<4
    channels-redis>=3.2.0
    aioredis
    django-postgres-fuzzycount

[options.extras_require]
docs = sphinx>=2.2.0

[options.package_data]
* =
 *.rst
 templates/*

[options.packages.find]
exclude = tests
where = ./src/

[coverage:run]
source = ./src/.
omit =
    migrations,
    admin.py,
    test*

[coverage:report]
exclude_lines =
    # Ignore not abstract methods, as these cannot be tested
    raise NotImplementedError

[flake8]
max-line-length = 88
filename =
    src/*
exclude =
    .tox,
    __pycache__,
    migrations,
    templates
